Revert "[Feat/Client/Implement-Request-Move] : player moving 서버/클라이언트 통신 구현"